refactor(portal-rest): rename requestPortalToken to requestVerificationToken
